--- a/priv/lib-src/_settings.variables.scss
+++ b/priv/lib-src/_settings.variables.scss
@@ -21,7 +21,7 @@ body {
     --flagPurple: #B99FE4;
 
     --primaryColor: var(--theme, var(--flagRed));
-    --typographyColor: black;
+    --typographyColor: #242424;
     --errorColor: red;
 
     --mainMargin: 4rem;
