--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -70,26 +70,21 @@ html {
 body {
     background: white;
 
-    &:before {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 2em;
-        background: var(--theme);
-        border-bottom: 3px solid color-mix(in srgb, var(--theme), black 30%);
-    }
-
-    &.-is-menu-open {
-        height: 100dvh;
-        overflow: hidden;
-    }
+    // &:before {
+    //     content: '';
+    //     display: block;
+    //     width: 100%;
+    //     height: 2em;
+    //     background: var(--theme);
+    //     border-bottom: 3px solid color-mix(in srgb, var(--theme), black 30%);
+    // }
 }
 
 main {
-    padding: 2rem 2.5%;
+    padding: 0 2.5% 2rem;
     
     @include breakpoint($mediumBreakpoint) {
-        padding: 4rem;
+        padding: 0 4rem 4rem;
     }
 }
 
