--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -950,6 +950,13 @@ button {
 .c-btn-agenda svg {
   height: 1.6rem;
 }
+.c-btn-agenda path {
+  fill: color-mix(in srgb, var(--theme), black 30%);
+  transition: fill 0.3s;
+}
+.c-btn-agenda:hover path {
+  fill: color-mix(in srgb, var(--theme), black 50%);
+}
 
 .c-calendar {
   padding: 0;
@@ -1020,12 +1027,21 @@ button {
   position: relative;
   text-decoration: none;
 }
+.c-calendar-item__title a:after {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='var(--typographyColor)' d='M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112v320c0 44.2 35.8 80 80 80h320c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v112c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16h112c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z'/%3E%3C/svg%3E");
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -7px;
+  right: -23px;
+  transform: scale(0.5);
+}
 .c-calendar-item__title a:before {
   content: "";
   width: 100%;
   height: 3px;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   background: color-mix(in srgb, var(--theme), black 30%);
   transition: width 0.3s;
@@ -1034,7 +1050,7 @@ button {
   text-decoration: none;
 }
 .c-calendar-item__title a:hover:before {
-  width: 105%;
+  width: 110%;
 }
 
 .c-calendar-item__address {
