--- a/priv/lib-src/style.scss
+++ b/priv/lib-src/style.scss
@@ -16,5 +16,6 @@
 @import "components.keyword-list";
 @import "components.nav";
 
+@import "template.edit";
 @import "template.logon";
 @import "utilities";
