--- a/priv/lib-src/_elements.typography.scss
+++ b/priv/lib-src/_elements.typography.scss
@@ -13,6 +13,7 @@ body {
 a {
     color: currentColor;
     text-decoration: underline;
+    text-underline-offset: 3px;
 
     @include setInteractive {
         color: currentColor;
@@ -104,7 +105,7 @@ h4 {
 
 .c-summary:not(h1,h2,h3) {
     max-width: 70ch;
-    margin: 0 0 2em;
+    margin: 2em 0;
     font-size: 1.2em;
     text-wrap: balance;
     font-weight: bold;
@@ -129,7 +130,7 @@ h4 {
     text-wrap: balance;
 
     a:not(.c-btn) {
-        color: color-mix(in srgb, var(--theme), black 30%);
+        color: var(--darkTheme);
         text-decoration: underline;
 
         @include setInteractive {
