Finish frontend edit, add markdowns, add keywords

--- a/priv/lib-src/_components.buttons.scss
+++ b/priv/lib-src/_components.buttons.scss
@@ -159,6 +159,7 @@ button {
     background: var(--theme);
     border: 2px solid var(--darkTheme);
     text-decoration: none;
+    color: #242424;
 
     svg {
         width: 16px;
