--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -318,10 +318,10 @@ body {
   --bodyBg: light-dark(var(--white), #242424);
   --flagRed: #FF575B;
   --flagPink: #D99FC8;
-  --flagWhite: white;
+  --flagWhite: #FFFFFF;
   --flagLightBlue: #7CCAF2;
   --flagBrown: #5B3A1B;
-  --flagBlack: black;
+  --flagBlack: #000000;
   --flagOrange: #FF8353;
   --flagYellow: #FABA2C;
   --flagGreen: #7AC74D;
@@ -934,6 +934,7 @@ button {
   background: var(--theme);
   border: 2px solid var(--darkTheme);
   text-decoration: none;
+  color: #242424;
 }
 .c-btn-add-event svg {
   width: 16px;
@@ -1005,6 +1006,16 @@ body.color--flagBrown .c-btn-add-event path {
   position: sticky;
   top: 0;
   z-index: 100;
+}
+@media only screen and (min-width: 1088px) {
+  .c-calendar {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+  }
+  .c-calendar > li:first-child {
+    grid-column: span 2;
+  }
 }
 
 .c-calendar__divider {
@@ -1245,6 +1256,10 @@ body.color--flagBrown .c-footer {
 .c-footer__mode label {
   cursor: pointer;
 }
+.c-footer__mode label:hover, .c-footer__mode label:active, .c-footer__mode label:focus, .c-footer__mode label:focus:active {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
 .c-footer__mode input[type=radio] {
   appearance: none;
 }
@@ -1334,6 +1349,7 @@ body.color--flagBrown .c-main-nav {
 }
 
 .t-edit {
+  --typographyColor: #242424;
   padding: 3em 0;
   color: var(--typographyColor);
   font-family: var(--bodyFont);
@@ -1343,6 +1359,18 @@ body.color--flagBrown .c-main-nav {
 }
 .t-edit h2 {
   font-size: 1.4em;
+}
+.t-edit input[type=text],
+.t-edit input[type=date],
+.t-edit input[type=time],
+.t-edit textarea {
+  border: 2px solid var(--typographyColor);
+}
+.t-edit .form-group label.control-label {
+  color: var(--typographyColor);
+}
+.t-edit a[id*=subject] {
+  text-decoration: underline;
 }
 
 #editcol {
@@ -1377,7 +1405,7 @@ body.color--flagBrown .c-main-nav {
   background: color-mix(in srgb, var(--flagRed), white 70%);
 }
 
-.t-logon label {
+.t-logon .z-logon-box label {
   font-size: 1.3em;
 }
 
